# smartytask-v2

./: .env.example  .gitignore  HANDOFF.md  Makefile  PREVIEW.html  README.md  REBUILD_MODELS.md  REBUILD_SPEC.md  manage.py  pyproject.toml
src/accounts/: admin.py  forms.py  models.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py
src/billing/: admin.py  models.py
src/billing/migrations/: 0001_initial.py
src/inbox/: admin.py  apps.py  models.py
src/inbox/migrations/: 0001_initial.py
src/smartytask/: asgi.py  urls.py  wsgi.py
src/smartytask/settings/: base.py  dev.py  prod.py
src/tasks/: admin.py  forms.py  models.py  saved_views.py  urls.py  views.py
src/tasks/migrations/: 0001_initial.py
src/tasks/templatetags/: tasks_extras.py
src/templates/: _nav.html  _nav_mobile.html  base.html  base_auth.html
src/templates/accounts/: login.html  signup.html
src/templates/tasks/: _action_edit.html  _action_row.html  _project_edit.html  _project_row.html  _quick_add.html  _quick_add_project.html  inbox.html  next_actions.html  project_detail.html  projects.html
tests/: test_smoke.py  test_views.py
